# CMOD_A7_35T_1

./: .gitignore  LICENSE  README.md
fpga/hw_system/: Makefile
fpga/hw_system/scripts/: add_bootloader.tcl  create_hw_system.tcl  create_workspace.tcl  export_hw_system.tcl  implement_hw_system.tcl
fpga/hw_system/src/: hw_system_bd.tcl  system.mss  system.xdc
fpga/sw_system/: CMakeLists.txt
fpga/sw_system/scripts/: download_bitfile.tcl  lscript.ld  run_elf.tcl
fpga/sw_system/src/: main.c
fpga/sw_system/src/actuators/: CMakeLists.txt  actuators.c  actuators.h
fpga/sw_system/src/buffer/: CMakeLists.txt  buffer.c  buffer.h
fpga/sw_system/src/buttons/: CMakeLists.txt  buttons.c  buttons.h
fpga/sw_system/src/config/: actuators_cfg.h  buttons_cfg.h  dinouts_cfg.h  irproximity_cfg.h  lcd_cfg.h  leds_cfg.h  leds_config.h  platform_cfg.h  rtc_cfg.h  supercap_cfg.h  wifi_cfg.h  xadc_cfg.h
fpga/sw_system/src/dinouts/: CMakeLists.txt  dinouts.c  dinouts.h
fpga/sw_system/src/happypills/: CMakeLists.txt  happypills.c  happypills.h  happypills_controller.c  happypills_controller.h  happypills_hmi.c  happypills_hmi.h
fpga/sw_system/src/http_client/: CMakeLists.txt  http_client.c  http_client.h
fpga/sw_system/src/irproximity/: CMakeLists.txt  irproximity.c  irproximity.h
fpga/sw_system/src/lcd/: CMakeLists.txt  lcd.c  lcd.h
fpga/sw_system/src/leds/: CMakeLists.txt  leds.c  leds.h
fpga/sw_system/src/others/: lcd.c  lcd.h  remote.c  remote.h  rgb_leds_cmd.c  rgb_leds_cmd.h  tinysh.c  tinysh.h  vaxi_os.c  vaxi_os.h  wifi.c  wifi.h  wifi_uart.c  wifi_uart.h  wifi_utils.c  wifi_utils.h
fpga/sw_system/src/platform/: CMakeLists.txt  platform.c  platform.h
fpga/sw_system/src/rtc/: CMakeLists.txt  rtc.c  rtc.h  rtc_ds1302.c  rtc_ds1302.h
fpga/sw_system/src/scheduler/: CMakeLists.txt  scheduler.c  scheduler.h
fpga/sw_system/src/sd/: CMakeLists.txt  sd_spi.c  sd_spi.h
fpga/sw_system/src/supercap/: CMakeLists.txt  supercap.c  supercap.h
fpga/sw_system/src/wifi_esp8266/: CMakeLists.txt  wifi_esp8266.c  wifi_esp8266.h  wifi_gpio.c  wifi_gpio.h  wifi_openat.c  wifi_openat.h  wifi_uart.c  wifi_uart.h  wifi_utils.c  wifi_utils.h
fpga/sw_system/src/xadc/: CMakeLists.txt  xadc.c  xadc.h
server_test_echo/: server_test_echo.js
